EDM-1274: Store system events in the database
